<resources>
    <string name="app_name">ComicMe</string>
    <string name="action_buy_pro">Unlock Pro</string>
    <string name="action_share">Share</string>
    <string name="action_search">Search</string>
    <string name="list_all_fragment">List all fragment</string>
    <string name="historical_comic_fragment">historical fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_filter">New Filter</string>
    <string name="history">History</string>
    <string name="buy">Buy</string>
    <string name="alert_no_internet">Please connect to internet for process the pictures.</string>
    <string name="button_ok">Ok</string>
    <string name="error">Error</string>
    <string name="alert_filter_list_server_down">Oops! The server is under construction. Please try again later.</string>
    <string name="exit">EXIT</string>
    <string name="retry">RETRY</string>
    <string name="historical_filters">historical_filters</string>
    <string name="comic_me_app">comic_me_app</string>
    <string name="detailed_pick_an_pic">Please pick a picture</string>
    <string name="input_picture_to_comic">Select a picture</string>
    <string name="picture_album">Album</string>
    <string name="picture_collection_camera">Camera</string>
    <string name="picture_collection_gallery">Gallery</string>
    <string name="image_detailed_title">Place face inside the frame</string>
    <string name="image_detailed_confirm">OK</string>
    <string name="image_detailed_error01">Image scale too much, please scale down.</string>
    <string name="image_detailed_error">Error!</string>

    <string name="image_detailed_error02">No face in the picture, please adjust and try again.</string>
    <string name="image_detailed_error03">One face in picture only, please try again.</string>
    <string name="image_detailed_error04">Face too small in picture, please adjust.</string>
    <string name="image_detailed_error05">Please look at the camera.</string>
    <string name="image_detailed_error07">Internal error, please try again.</string>
    <string name="image_detailed_error06">Place full face in the frame please.</string>
    <string name="take_picture">Take a picture</string>
    <string name="delete_this_picture">Delete this picture?</string>
    <string name="image_detailed_cancel">Cancel</string>
    <string name="picture_process_uploading">Uploading...</string>
    <string name="server_maintain_please_try_again">Server maintain, please try again.</string>
    <string name="image_detailed_error08">Server processed error, please try again.</string>
    <string name="picture_process_processing">Processing...</string>
    <string name="show_detail_buy_no_watermark">Buy pro for water mark removed</string>
    <string name="action_home">Home</string>
    <string name="show_detail_toggle_note">Picture</string>
    <string name="show_result_save_to_disk">Save to gallery?</string>
    <string name="show_result_confirm">SAVE</string>
    <string name="show_result_cancel">CANCEL</string>
    <string name="show_result_pic_saved">Picture saved.</string>
    <string name="register_button_text">Register</string>
    <string name="register_button_login_text">Login</string>
    <string name="register_note_text">Already registered? You may login directly.</string>
    <string name="register_retrieve_text">Forget password? Click here.</string>
    <string name="register_actionbar_title">Register</string>
    <string name="lobby_already_login">You\'ve already registered.</string>
    <string name="sregister_id_text">id:</string>
    <string name="sregister_password_text">Password:</string>
    <string name="sregister_cpassword_text">Confrim\nPassword:</string>
    <string name="sregister_email_text">email:</string>
    <string name="sregister_button_register_text">Rigister</string>
    <string name="sregister_actionbar_title">Start Register</string>
    <string name="login_id_text">id:</string>
    <string name="login_password_text">Password:</string>
    <string name="login_text">Login</string>
    <string name="login_actionbar_title">Login</string>
    <string name="retrieve_email_text">email:</string>
    <string name="retrieve_emial_previous">Please enter previous registered email</string>
    <string name="retrieve_previous_password">Retrieve privious password</string>
    <string name="retrieve_email_warning">Please enter valid email.</string>
    <string name="email_did_not_exist_please_try_again">Email did not exist, please try again.</string>
    <string name="password_sent_to_email">Login id had already sent to email. Please login with them.</string>
    <string name="login_error_no_id_password">No input error, please try again.</string>
    <string name="login_invalid_user">User id or password incorrect. \nPlease try again.</string>
    <string name="refresh_access_denied">The account is logged in by other people.</string>
    <string name="sregister_error_input">There\'s input error, please re-enter.</string>
    <string name="sregister_register_fail">There\'s already same user id, please try again.</string>
    <string name="sregister_register_success">Register succeed, please login.</string>
</resources>