<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/black">

    <ImageView
        android:id="@+id/animeme_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/register_register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:srcCompat="@drawable/icon_animeme_red" />

    <Button
        android:id="@+id/register_register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_button_text"
        app:layout_constraintTop_toBottomOf="@id/animeme_logo"
        app:layout_constraintBottom_toTopOf="@id/register_divider"
        android:layout_marginLeft="30dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginRight="30dp"
        app:layout_constraintEnd_toEndOf="parent" />

    <View style="@style/HorizontalDivider"
        android:id="@+id/register_divider"
        app:layout_constraintTop_toBottomOf="@id/register_register_button"
        app:layout_constraintBottom_toTopOf="@id/register_note_textview" />

    <TextView
        android:id="@+id/register_note_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_note_text"
        android:textColor="#EFE7E7"
        app:layout_constraintTop_toBottomOf="@id/register_divider"
        app:layout_constraintBottom_toTopOf="@id/register_login_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/register_login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_button_login_text"
        app:layout_constraintTop_toBottomOf="@id/register_note_textview"
        app:layout_constraintBottom_toTopOf="@id/register_retrieve_textview"
        android:layout_marginLeft="30dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginRight="30dp"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/register_retrieve_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_retrieve_text"
        android:textColor="#EFE7E7"
        app:layout_constraintTop_toBottomOf="@id/register_login_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>