<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".RetrievePasswordActivity">

    <ImageView
        android:id="@+id/retrieve_animeme_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/retrieve_email_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:srcCompat="@drawable/icon_animeme_red" />

    <TextView
        android:id="@+id/retrieve_email_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retrieve_email_text"
        android:textColor="#BDB4B4"
        app:layout_constraintEnd_toStartOf="@id/retrieve_email_edittext"
        app:layout_constraintTop_toTopOf="@id/retrieve_email_edittext"
        app:layout_constraintBottom_toBottomOf="@id/retrieve_email_edittext" />

    <EditText
        android:id="@+id/retrieve_email_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/retrieve_emial_previous"
        android:inputType="textEmailAddress"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/retrieve_animeme_logo"
        app:layout_constraintBottom_toTopOf="@id/retrieve_retrieve_button" />

    <Button
        android:id="@+id/retrieve_retrieve_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/retrieve_previous_password"
        app:layout_constraintTop_toBottomOf="@id/retrieve_email_edittext"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="30dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginRight="30dp"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>